--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,16 @@ body,
     height: 100%;
     background: ivory;
 }
+
+.interface
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 20px;
+    /* width: 100%;
+    height: 100%; */
+    /* pointer-events: none; */
+    font-family: 'Bebas Neue', cursive;
+}
+
